Include necessary JVM options to build Nessie with Java 17